fix mobile email address view; circles no longer display on mobile

--- a/css/circles.css
+++ b/css/circles.css
@@ -125,7 +125,7 @@ modification of https://codepen.io/alvarotrigo/pen/GRvYNax
 }
 
 @media screen and (max-width: 800px) {
-    .area {
+    .area, .circles {
         display: none;
     }
 }
